Add Ashes and Echoes track pages and metadata

--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -55,11 +55,20 @@
     <section class="section" id="tracklist" aria-labelledby="tracks-heading">
       <h2 id="tracks-heading">Tracklist</h2>
       <ol class="tracklist">
-        <li class="track-item"><span>1.</span> <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a></li>
-        <li class="track-item"><span>2.</span> <a href="/albums/ashes-and-echoes/tracks/ashes-and-echoes.html">Ashes and Echoes</a></li>
-        <li class="track-item"><span>3.</span> <a href="/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a></li>
-        <li class="track-item"><span>4.</span> <a href="/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html">Overheard at Burning Man</a></li>
+        <li class="track-item"><span>1.</span> <a href="/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html">We Did Start the Fire (Burning Man History Jam)</a></li>
+        <li class="track-item"><span>2.</span> <a href="/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a></li>
+        <li class="track-item"><span>3.</span> <a href="/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a></li>
+        <li class="track-item"><span>4.</span> <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a></li>
         <li class="track-item"><span>5.</span> <a href="/albums/ashes-and-echoes/tracks/speak-burner-to-me.html">Speak Burner to Me</a></li>
+        <li class="track-item"><span>6.</span> <a href="/albums/ashes-and-echoes/tracks/weird-steel.html">Weird Steel</a></li>
+        <li class="track-item"><span>7.</span> <a href="/albums/ashes-and-echoes/tracks/dust-to-dust.html">Dust to Dust (The Playa Sucks)</a></li>
+        <li class="track-item"><span>8.</span> <a href="/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a></li>
+        <li class="track-item"><span>9.</span> <a href="/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html">The Buck Bandersnatch Song (Playa Dreams)</a></li>
+        <li class="track-item"><span>10.</span> <a href="/albums/ashes-and-echoes/tracks/ash-and-echoes.html">Ash and Echoes (The Temple Song)</a></li>
+        <li class="track-item"><span>11.</span> <a href="/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html">Overheard at Burning Man</a></li>
+        <li class="track-item"><span>12.</span> <a href="/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html">Fighting Wasn't Working</a></li>
+        <li class="track-item"><span>13.</span> <a href="/albums/ashes-and-echoes/tracks/no-authority-night-crew.html">No Authority Night Crew</a></li>
+        <li class="track-item"><span>14.</span> <a href="/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html">Petaluma Chicken Scratch</a></li>
       </ol>
     </section>
   </main>
@@ -92,9 +101,43 @@
     "track": [
       {
         "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
+        "name": "We Did Start the Fire (Burning Man History Jam)",
+        "position": 1,
+        "duration": "PT6M29S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
+        "image": "https://music.mycal.net/assets/img/tracks/we-did-start-the-fire.jpg",
+        "genre": ["Electronic", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
+        "name": "I Was Meant to Burn",
+        "position": 2,
+        "duration": "PT3M45S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
+        "image": "https://music.mycal.net/assets/img/tracks/i-was-meant-to-burn.jpg",
+        "genre": ["Folk", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
+        "name": "Burner Girl",
+        "position": 3,
+        "duration": "PT4M",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
+        "image": "https://music.mycal.net/assets/img/tracks/burner-girl.jpg",
+        "genre": ["Pop", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
         "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
         "name": "Ten Principles, One Heart",
-        "position": 1,
+        "position": 4,
+        "duration": "PT2M59S",
         "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
         "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
         "genre": ["Folk", "Burning Man"],
@@ -102,19 +145,43 @@
       },
       {
         "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ashes-and-echoes",
-        "name": "Ashes and Echoes",
-        "position": 2,
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ashes-and-echoes",
-        "image": "https://music.mycal.net/assets/img/tracks/ashes-and-echoes.jpg",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+        "name": "Speak Burner to Me",
+        "position": 5,
+        "duration": "PT3M43S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+        "image": "https://music.mycal.net/assets/img/tracks/speak-burner-to-me.jpg",
         "genre": ["Electronic", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
+        "name": "Weird Steel",
+        "position": 6,
+        "duration": "PT3M42S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
+        "image": "https://music.mycal.net/assets/img/tracks/weird-steel.jpg",
+        "genre": ["Electronic", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
+        "name": "Dust to Dust (The Playa Sucks)",
+        "position": 7,
+        "duration": "PT3M51S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
+        "image": "https://music.mycal.net/assets/img/tracks/dust-to-dust.jpg",
+        "genre": ["Rock", "Burning Man"],
         "datePublished": "2025-08-15"
       },
       {
         "@type": "MusicRecording",
         "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
         "name": "Sparkle Pony",
-        "position": 3,
+        "position": 8,
+        "duration": "PT3M8S",
         "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
         "image": "https://music.mycal.net/assets/img/tracks/sparkle-pony.jpg",
         "genre": ["Pop", "Burning Man"],
@@ -122,9 +189,32 @@
       },
       {
         "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
+        "name": "The Buck Bandersnatch Song (Playa Dreams)",
+        "position": 9,
+        "duration": "PT3M14S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
+        "image": "https://music.mycal.net/assets/img/tracks/buck-bandersnatch-song.jpg",
+        "genre": ["Folk", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
+        "name": "Ash and Echoes (The Temple Song)",
+        "position": 10,
+        "duration": "PT3M43S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
+        "image": "https://music.mycal.net/assets/img/tracks/ash-and-echoes.jpg",
+        "genre": ["Electronic", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
         "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
         "name": "Overheard at Burning Man",
-        "position": 4,
+        "position": 11,
+        "duration": "PT6M44S",
         "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
         "image": "https://music.mycal.net/assets/img/tracks/overheard-at-burning-man.jpg",
         "genre": ["Spoken Word", "Burning Man"],
@@ -132,12 +222,35 @@
       },
       {
         "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-        "name": "Speak Burner to Me",
-        "position": 5,
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-        "image": "https://music.mycal.net/assets/img/tracks/speak-burner-to-me.jpg",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
+        "name": "Fighting Wasn't Working",
+        "position": 12,
+        "duration": "PT2M59S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
+        "image": "https://music.mycal.net/assets/img/tracks/fighting-wasnt-working.jpg",
+        "genre": ["Folk", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
+        "name": "No Authority Night Crew",
+        "position": 13,
+        "duration": "PT2M41S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
+        "image": "https://music.mycal.net/assets/img/tracks/no-authority-night-crew.jpg",
         "genre": ["Electronic", "Burning Man"],
+        "datePublished": "2025-08-15"
+      },
+      {
+        "@type": "MusicRecording",
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
+        "name": "Petaluma Chicken Scratch",
+        "position": 14,
+        "duration": "PT5M49S",
+        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
+        "image": "https://music.mycal.net/assets/img/tracks/petaluma-chicken-scratch.jpg",
+        "genre": ["Bluegrass", "Burning Man"],
         "datePublished": "2025-08-15"
       }
     ]
