--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speak Burner to Me | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Speak Burner to Me riffs on playa slang and radio chatter over bouncing synth lines.">
+  <title>Ash and Echoes (The Temple Song) | Ashes and Echoes | Mycal</title>
+  <meta name="description" content="Ash and Echoes (The Temple Song) is a cinematic ballad for sunrise at the Temple burn.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -27,11 +27,11 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/speak-burner-to-me.jpg" alt="Cover art for Speak Burner to Me">
+      <img src="/assets/img/tracks/ash-and-echoes.jpg" alt="Cover art for Ash and Echoes (The Temple Song)">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 5</p>
-        <h1>Speak Burner to Me</h1>
-        <p>A dance-floor love letter to the slang that only makes sense beyond the gate.</p>
+        <p class="meta">Ashes and Echoes — Track 10</p>
+        <h1>Ash and Echoes (The Temple Song)</h1>
+        <p>Slow-burning synths and deep drums carrying a farewell chorus for those we remember.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -61,8 +61,8 @@ Lyrics coming soon.
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-    "name": "Speak Burner to Me",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
+    "name": "Ash and Echoes (The Temple Song)",
     "duration": "PT3M43S",
     "byArtist": {
       "@type": "MusicGroup",
@@ -74,8 +74,8 @@ Lyrics coming soon.
     },
     "genre": ["Electronic", "Burning Man"],
     "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/speak-burner-to-me.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+    "image": "https://music.mycal.net/assets/img/tracks/ash-and-echoes.jpg",
+    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
     "sameAs": [
       "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
     ],
