--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speak Burner to Me | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Speak Burner to Me riffs on playa slang and radio chatter over bouncing synth lines.">
+  <title>The Buck Bandersnatch Song (Playa Dreams) | Ashes and Echoes | Mycal</title>
+  <meta name="description" content="The Buck Bandersnatch Song (Playa Dreams) is a whimsical folk tale about imaginary creatures roaming the open playa.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -27,11 +27,11 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/speak-burner-to-me.jpg" alt="Cover art for Speak Burner to Me">
+      <img src="/assets/img/tracks/buck-bandersnatch-song.jpg" alt="Cover art for The Buck Bandersnatch Song (Playa Dreams)">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 5</p>
-        <h1>Speak Burner to Me</h1>
-        <p>A dance-floor love letter to the slang that only makes sense beyond the gate.</p>
+        <p class="meta">Ashes and Echoes — Track 9</p>
+        <h1>The Buck Bandersnatch Song (Playa Dreams)</h1>
+        <p>A campfire waltz with mandolins and whistles about chasing myths in moonlit dust.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -61,9 +61,9 @@ Lyrics coming soon.
   {
     "@context": "https://schema.org",
     "@type": "MusicRecording",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-    "name": "Speak Burner to Me",
-    "duration": "PT3M43S",
+    "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
+    "name": "The Buck Bandersnatch Song (Playa Dreams)",
+    "duration": "PT3M14S",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
@@ -72,10 +72,10 @@ Lyrics coming soon.
       "@type": "MusicAlbum",
       "@id": "https://music.mycal.net/albums/ashes-and-echoes"
     },
-    "genre": ["Electronic", "Burning Man"],
+    "genre": ["Folk", "Burning Man"],
     "datePublished": "2025-08-15",
-    "image": "https://music.mycal.net/assets/img/tracks/speak-burner-to-me.jpg",
-    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+    "image": "https://music.mycal.net/assets/img/tracks/buck-bandersnatch-song.jpg",
+    "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
     "sameAs": [
       "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
     ],
