--- a/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
+++ b/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Overheard at Burning Man | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Overheard at Burning Man stitches together real playa quotes over glitchy beats and warm pads.">
+  <meta name="description" content="Overheard at Burning Man stitches real camp conversations into a spoken-word soundscape.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -27,11 +27,11 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/overheard-at-burning-man.jpg" alt="Audio collage artwork for Overheard at Burning Man track">
+      <img src="/assets/img/tracks/overheard-at-burning-man.jpg" alt="Cover art for Overheard at Burning Man">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 4</p>
+        <p class="meta">Ashes and Echoes — Track 11</p>
         <h1>Overheard at Burning Man</h1>
-        <p>Snippets of playa conversation woven into a downtempo groove: advice shouted from art cars, whispers at the Temple, laughter at the waffle line.</p>
+        <p>Field recordings, whispered samples, and beat poetry pulled from playa conversations.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -41,38 +41,9 @@
 
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
-      <div class="lyrics">
-“Do you have any glitter-free hugs?”
-“Follow the light-up otter, we’re two blocks past the taco bus!”
-“I fixed your derailleur with a spoon.”
-“Hydrate or die-drate” written on a balloon.
-
-Chorus:
-Overheard at Burning Man, caught between the beats
-Snippets in the dust that make the city feel complete
-Overheard at Burning Man, laughter on repeat
-Every little phrase becomes a song beneath our feet
-
-Verse 2:
-“Temple’s that way, follow the quiet.”
-“Is that a satellite or just playa diet?”
-“My gift is shade, my gift is tea.”
-“Does anybody know where my campmates might be?”
-
-(Chorus)
-
-Bridge:
-Voices echo through the plywood halls
-Words drift upward when the neon falls
-What we say becomes the memory thread
-We take the quotes home, hang them over our beds
-
-Last chorus:
-Overheard at Burning Man, caught between the beats
-Snippets in the dust that make the city feel complete
-Overheard at Burning Man, laughter on repeat
-Every little phrase becomes a song beneath our feet
-      </div>
+      <pre class="lyrics-block">
+Lyrics coming soon.
+      </pre>
     </section>
   </main>
 
@@ -92,6 +63,7 @@ Every little phrase becomes a song beneath our feet
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
     "name": "Overheard at Burning Man",
+    "duration": "PT6M44S",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
@@ -109,7 +81,7 @@ Every little phrase becomes a song beneath our feet
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "“Do you have any glitter-free hugs?”\n“Follow the light-up otter, we’re two blocks past the taco bus!”\n“I fixed your derailleur with a spoon.”\n“Hydrate or die-drate” written on a balloon.\n\nChorus:\nOverheard at Burning Man, caught between the beats\nSnippets in the dust that make the city feel complete\nOverheard at Burning Man, laughter on repeat\nEvery little phrase becomes a song beneath our feet\n\nVerse 2:\n“Temple’s that way, follow the quiet.”\n“Is that a satellite or just playa diet?”\n“My gift is shade, my gift is tea.”\n“Does anybody know where my campmates might be?”\n\n(Chorus)\n\nBridge:\nVoices echo through the plywood halls\nWords drift upward when the neon falls\nWhat we say becomes the memory thread\nWe take the quotes home, hang them over our beds\n\nLast chorus:\nOverheard at Burning Man, caught between the beats\nSnippets in the dust that make the city feel complete\nOverheard at Burning Man, laughter on repeat\nEvery little phrase becomes a song beneath our feet"
+      "text": "Lyrics coming soon."
     }
   }
   </script>
