--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sparkle Pony | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Sparkle Pony is a playful, shimmering track about glitter, borrowed bikes, and playa serendipity.">
+  <meta name="description" content="Sparkle Pony is a playful electro-pop ride celebrating glitter, gifts, and learning the ropes.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -27,11 +27,11 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/sparkle-pony.jpg" alt="Playful art for the Sparkle Pony track with glittering lights">
+      <img src="/assets/img/tracks/sparkle-pony.jpg" alt="Cover art for Sparkle Pony">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 3</p>
+        <p class="meta">Ashes and Echoes — Track 8</p>
         <h1>Sparkle Pony</h1>
-        <p>A tongue-in-cheek ode to every glittered friend who shows up with vibes and leaves with your crescent wrench. Bouncy beats, talkbox hooks, and a lot of heart.</p>
+        <p>A bright synth jam that turns the term of endearment into a badge of honor.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -41,38 +41,9 @@
 
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
-      <div class="lyrics">
-You rolled in with rhinestone goggles
-Borrowed my bike, disappeared to the Man
-Came back at dawn with a thousand stories
-And somehow still no water in your can
-
-Chorus:
-Sparkle pony, stealing tools and stealing hearts
-Covered in glitter and playa dust art
-Sparkle pony, we laugh because it’s true
-You keep the vibe alive, we keep looking out for you
-
-Verse 2:
-You said “I’ll help with camp teardown”
-Then followed a dragonfly drone
-We love you even when we’re sweeping
-Silver stars you left on every cone
-
-(Chorus)
-
-Bridge:
-Radical inclusion means we keep you fed
-Teach you MOOP and gift a spare bed
-By the end of the burn you’re patching tents
-Learning the ropes with a joy that never ends
-
-Final chorus:
-Sparkle pony, stealing tools and stealing hearts
-Covered in glitter and playa dust art
-Sparkle pony, we laugh because it’s true
-You keep the vibe alive, we keep looking out for you
-      </div>
+      <pre class="lyrics-block">
+Lyrics coming soon.
+      </pre>
     </section>
   </main>
 
@@ -92,6 +63,7 @@ You keep the vibe alive, we keep looking out for you
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
     "name": "Sparkle Pony",
+    "duration": "PT3M8S",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
@@ -109,7 +81,7 @@ You keep the vibe alive, we keep looking out for you
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "You rolled in with rhinestone goggles\nBorrowed my bike, disappeared to the Man\nCame back at dawn with a thousand stories\nAnd somehow still no water in your can\n\nChorus:\nSparkle pony, stealing tools and stealing hearts\nCovered in glitter and playa dust art\nSparkle pony, we laugh because it’s true\nYou keep the vibe alive, we keep looking out for you\n\nVerse 2:\nYou said “I’ll help with camp teardown”\nThen followed a dragonfly drone\nWe love you even when we’re sweeping\nSilver stars you left on every cone\n\n(Chorus)\n\nBridge:\nRadical inclusion means we keep you fed\nTeach you MOOP and gift a spare bed\nBy the end of the burn you’re patching tents\nLearning the ropes with a joy that never ends\n\nFinal chorus:\nSparkle pony, stealing tools and stealing hearts\nCovered in glitter and playa dust art\nSparkle pony, we laugh because it’s true\nYou keep the vibe alive, we keep looking out for you"
+      "text": "Lyrics coming soon."
     }
   }
   </script>
