--- a/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
+++ b/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ten Principles, One Heart | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="Ten Principles, One Heart is a folk-electronic anthem celebrating Burning Man's guiding values.">
+  <meta name="description" content="Ten Principles, One Heart is a campfire chorus honoring radical inclusion, gifting, and communal effort.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -27,11 +27,11 @@
 
   <main>
     <section class="hero">
-      <img src="/assets/img/tracks/ten-principles-one-heart.jpg" alt="Desert-inspired artwork for Ten Principles, One Heart">
+      <img src="/assets/img/tracks/ten-principles-one-heart.jpg" alt="Cover art for Ten Principles, One Heart">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 1</p>
+        <p class="meta">Ashes and Echoes — Track 4</p>
         <h1>Ten Principles, One Heart</h1>
-        <p>A folk-electronic march built for sunrise rope lines and dusty dance floors. Each verse salutes the ten principles with harmonies that rise like fire embers.</p>
+        <p>Acoustic strums and hand percussion celebrating the values that hold the city together.</p>
         <div class="button-row">
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
@@ -41,43 +41,9 @@
 
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
-      <div class="lyrics">
-Gifted water on a scorching line
-Radical welcome in a hand-made sign
-Leave no trace on the cracked salt floor
-We pack it in, we pack it back, we build a little more
-
-Chorus:
-Ten principles, one heart beating under neon arcs
-Dusty feet and laser sparks
-Ten principles, one heart, glowing like the Temple dark
-We carry every flame back to the start
-
-Consent whispered in the speaker glow
-Decommodified, we let the commerce go
-Immediate, the moment sings
-When a thousand strangers build a city with their wings
-
-(Chorus)
-
-Civic duty when the wind cuts through
-MOOP patrol in the copper hue
-Participation's not a word, it's rusted on our tools
-Communal effort teaches dreamers better rules
-
-(Chorus)
-
-Immediacy in the sudden rain
-Self-reliance when the tarp pulls strain
-Self-expression in the sparks that fly
-From steel to sky, from sky to open sky
-
-Final chorus:
-Ten principles, one heart beating under neon arcs
-Dusty feet and laser sparks
-Ten principles, one heart, glowing like the Temple dark
-We carry every flame back to the start
-      </div>
+      <pre class="lyrics-block">
+Lyrics coming soon.
+      </pre>
     </section>
   </main>
 
@@ -97,6 +63,7 @@ We carry every flame back to the start
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
     "name": "Ten Principles, One Heart",
+    "duration": "PT2M59S",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
@@ -114,7 +81,7 @@ We carry every flame back to the start
     ],
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Gifted water on a scorching line\nRadical welcome in a hand-made sign\nLeave no trace on the cracked salt floor\nWe pack it in, we pack it back, we build a little more\n\nChorus:\nTen principles, one heart beating under neon arcs\nDusty feet and laser sparks\nTen principles, one heart, glowing like the Temple dark\nWe carry every flame back to the start\n\nConsent whispered in the speaker glow\nDecommodified, we let the commerce go\nImmediate, the moment sings\nWhen a thousand strangers build a city with their wings\n\n(Chorus)\n\nCivic duty when the wind cuts through\nMOOP patrol in the copper hue\nParticipation's not a word, it's rusted on our tools\nCommunal effort teaches dreamers better rules\n\n(Chorus)\n\nImmediacy in the sudden rain\nSelf-reliance when the tarp pulls strain\nSelf-expression in the sparks that fly\nFrom steel to sky, from sky to open sky\n\nFinal chorus:\nTen principles, one heart beating under neon arcs\nDusty feet and laser sparks\nTen principles, one heart, glowing like the Temple dark\nWe carry every flame back to the start"
+      "text": "Lyrics coming soon."
     }
   }
   </script>
