Add structured data for Ashes and Echoes album

--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -11,6 +11,185 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicAlbum",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes",
+  "name": "Ashes and Echoes — Songs from the Playa",
+  "alternateName": "Ashes and Echoes",
+  "byArtist": {
+    "@type": "MusicGroup",
+    "name": "Mycal"
+  },
+  "genre": [
+    "Folk",
+    "Electronic",
+    "Burning Man"
+  ],
+  "inLanguage": "en",
+  "datePublished": "2025-08-15",
+  "numTracks": 14,
+  "image": "https://music.mycal.net/assets/img/album/ashes-and-echoes-cover.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes",
+  "track": [
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
+      "name": "We Did Start the Fire (Burning Man History Jam)",
+      "position": 1,
+      "duration": "PT6M29S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
+      "name": "I was Meant to Burn",
+      "position": 2,
+      "duration": "PT3M45S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
+      "name": "Burner Girl",
+      "position": 3,
+      "duration": "PT4M",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
+      "name": "Ten Principles, One Heart",
+      "position": 4,
+      "duration": "PT2M59S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+      "name": "Speak Burner to Me",
+      "position": 5,
+      "duration": "PT3M43S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
+      "name": "Weird Steel",
+      "position": 6,
+      "duration": "PT3M42S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
+      "name": "Dust to Dust (The Playa Sucks)",
+      "position": 7,
+      "duration": "PT3M51S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
+      "name": "Sparkle Pony",
+      "position": 8,
+      "duration": "PT3M8S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
+      "name": "The Buck Bandersnatch Song (Playa Dreams)",
+      "position": 9,
+      "duration": "PT3M14S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
+      "name": "Ash and Echoes (The Temple Song)",
+      "position": 10,
+      "duration": "PT3M43S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
+      "name": "Overheard at Burning Man",
+      "position": 11,
+      "duration": "PT6M44S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
+      "name": "Fighting Wasn't Working",
+      "position": 12,
+      "duration": "PT2M59S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
+      "name": "No Authority Night Crew",
+      "position": 13,
+      "duration": "PT2M41S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    },
+    {
+      "@type": "MusicRecording",
+      "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
+      "name": "Petaluma Chicken Scratch",
+      "position": 14,
+      "duration": "PT5M49S",
+      "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
+      "inAlbum": {
+        "@id": "https://music.mycal.net/albums/ashes-and-echoes"
+      }
+    }
+  ]
+}
+  </script>
 </head>
 <body>
   <header>
@@ -82,179 +261,5 @@
       </div>
     </div>
   </footer>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MusicAlbum",
-    "@id": "https://music.mycal.net/albums/ashes-and-echoes",
-    "name": "Ashes and Echoes — Songs from the Playa",
-    "image": "https://music.mycal.net/assets/img/album/ashes-and-echoes-cover.jpg",
-    "datePublished": "2025-08-15",
-    "genre": ["Folk", "Electronic", "Burning Man"],
-    "byArtist": {
-      "@type": "MusicGroup",
-      "name": "Mycal"
-    },
-    "url": "https://music.mycal.net/albums/ashes-and-echoes",
-    "description": "A Burning Man-inspired album blending folk, electronics, and playa storytelling.",
-    "track": [
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
-        "name": "We Did Start the Fire (Burning Man History Jam)",
-        "position": 1,
-        "duration": "PT6M29S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
-        "image": "https://music.mycal.net/assets/img/tracks/we-did-start-the-fire.jpg",
-        "genre": ["Electronic", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
-        "name": "I Was Meant to Burn",
-        "position": 2,
-        "duration": "PT3M45S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
-        "image": "https://music.mycal.net/assets/img/tracks/i-was-meant-to-burn.jpg",
-        "genre": ["Folk", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
-        "name": "Burner Girl",
-        "position": 3,
-        "duration": "PT4M",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
-        "image": "https://music.mycal.net/assets/img/tracks/burner-girl.jpg",
-        "genre": ["Pop", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-        "name": "Ten Principles, One Heart",
-        "position": 4,
-        "duration": "PT2M59S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
-        "image": "https://music.mycal.net/assets/img/tracks/ten-principles-one-heart.jpg",
-        "genre": ["Folk", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-        "name": "Speak Burner to Me",
-        "position": 5,
-        "duration": "PT3M43S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
-        "image": "https://music.mycal.net/assets/img/tracks/speak-burner-to-me.jpg",
-        "genre": ["Electronic", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
-        "name": "Weird Steel",
-        "position": 6,
-        "duration": "PT3M42S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
-        "image": "https://music.mycal.net/assets/img/tracks/weird-steel.jpg",
-        "genre": ["Electronic", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
-        "name": "Dust to Dust (The Playa Sucks)",
-        "position": 7,
-        "duration": "PT3M51S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
-        "image": "https://music.mycal.net/assets/img/tracks/dust-to-dust.jpg",
-        "genre": ["Rock", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
-        "name": "Sparkle Pony",
-        "position": 8,
-        "duration": "PT3M8S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
-        "image": "https://music.mycal.net/assets/img/tracks/sparkle-pony.jpg",
-        "genre": ["Pop", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
-        "name": "The Buck Bandersnatch Song (Playa Dreams)",
-        "position": 9,
-        "duration": "PT3M14S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
-        "image": "https://music.mycal.net/assets/img/tracks/buck-bandersnatch-song.jpg",
-        "genre": ["Folk", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
-        "name": "Ash and Echoes (The Temple Song)",
-        "position": 10,
-        "duration": "PT3M43S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
-        "image": "https://music.mycal.net/assets/img/tracks/ash-and-echoes.jpg",
-        "genre": ["Electronic", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
-        "name": "Overheard at Burning Man",
-        "position": 11,
-        "duration": "PT6M44S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
-        "image": "https://music.mycal.net/assets/img/tracks/overheard-at-burning-man.jpg",
-        "genre": ["Spoken Word", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
-        "name": "Fighting Wasn't Working",
-        "position": 12,
-        "duration": "PT2M59S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
-        "image": "https://music.mycal.net/assets/img/tracks/fighting-wasnt-working.jpg",
-        "genre": ["Folk", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
-        "name": "No Authority Night Crew",
-        "position": 13,
-        "duration": "PT2M41S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
-        "image": "https://music.mycal.net/assets/img/tracks/no-authority-night-crew.jpg",
-        "genre": ["Electronic", "Burning Man"],
-        "datePublished": "2025-08-15"
-      },
-      {
-        "@type": "MusicRecording",
-        "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
-        "name": "Petaluma Chicken Scratch",
-        "position": 14,
-        "duration": "PT5M49S",
-        "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
-        "image": "https://music.mycal.net/assets/img/tracks/petaluma-chicken-scratch.jpg",
-        "genre": ["Bluegrass", "Burning Man"],
-        "datePublished": "2025-08-15"
-      }
-    ]
-  }
-  </script>
 </body>
 </html>
