--- a/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
+++ b/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/buck-bandersnatch-song",
     "name": "The Buck Bandersnatch Song (Playa Dreams)",
     "duration": "PT3M14S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
