--- a/albums/ashes-and-echoes/tracks/burner-girl.html
+++ b/albums/ashes-and-echoes/tracks/burner-girl.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/burner-girl",
     "name": "Burner Girl",
     "duration": "PT4M",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
