--- a/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html
+++ b/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/fighting-wasnt-working",
     "name": "Fighting Wasn't Working",
     "duration": "PT2M59S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
