--- a/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
+++ b/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
@@ -62,8 +62,9 @@ Lyrics coming soon.
     "@context": "https://schema.org",
     "@type": "MusicRecording",
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
-    "name": "I Was Meant to Burn",
+    "name": "I was Meant to Burn",
     "duration": "PT3M45S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
