--- a/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
+++ b/albums/ashes-and-echoes/tracks/no-authority-night-crew.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/no-authority-night-crew",
     "name": "No Authority Night Crew",
     "duration": "PT2M41S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
