--- a/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
+++ b/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/overheard-at-burning-man",
     "name": "Overheard at Burning Man",
     "duration": "PT6M44S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
