--- a/albums/ashes-and-echoes/tracks/sparkle-pony.html
+++ b/albums/ashes-and-echoes/tracks/sparkle-pony.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/sparkle-pony",
     "name": "Sparkle Pony",
     "duration": "PT3M8S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
