--- a/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
+++ b/albums/ashes-and-echoes/tracks/speak-burner-to-me.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/speak-burner-to-me",
     "name": "Speak Burner to Me",
     "duration": "PT3M43S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
