--- a/albums/ashes-and-echoes/tracks/weird-steel.html
+++ b/albums/ashes-and-echoes/tracks/weird-steel.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/weird-steel",
     "name": "Weird Steel",
     "duration": "PT3M42S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
