--- a/albums/ashes-and-echoes/tracks/dust-to-dust.html
+++ b/albums/ashes-and-echoes/tracks/dust-to-dust.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/dust-to-dust",
     "name": "Dust to Dust (The Playa Sucks)",
     "duration": "PT3M51S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
