--- a/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
+++ b/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch",
     "name": "Petaluma Chicken Scratch",
     "duration": "PT5M49S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
