--- a/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
+++ b/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
@@ -64,6 +64,7 @@ Lyrics coming soon.
     "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ten-principles-one-heart",
     "name": "Ten Principles, One Heart",
     "duration": "PT2M59S",
+    "inLanguage": "en",
     "byArtist": {
       "@type": "MusicGroup",
       "name": "Mycal"
