Add lyrics and metadata for I Was Meant to Burn

--- a/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
+++ b/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Was Meant to Burn | Ashes and Echoes | Mycal</title>
-  <meta name="description" content="I Was Meant to Burn is a mid-tempo anthem about choosing the flame over the sidelines.">
+  <meta name="description" content="Steel-and-fire mantra about surrendering to transformation in the desert.">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -29,20 +29,101 @@
     <section class="hero">
       <img src="/assets/img/tracks/i-was-meant-to-burn.jpg" alt="Cover art for I Was Meant to Burn">
       <div class="hero-content">
-        <p class="meta">Ashes and Echoes — Track 2</p>
+        <p class="meta">Ashes and Echoes — Track 2 · 3:45</p>
         <h1>I Was Meant to Burn</h1>
-        <p>Guitar swells and dusty hand drums about answering the call to create, dismantle, and begin again.</p>
+        <p>Steel-and-fire mantra about surrendering to transformation in the desert. The Man and the Temple rise, fall, and rise again — a reminder that some part of you was always destined for the flame.</p>
         <div class="button-row">
-          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
+          <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Listen everywhere</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
         </div>
       </div>
     </section>
 
+    <section class="section" aria-labelledby="about-heading">
+      <h2 id="about-heading">About this track</h2>
+      <p>
+        “I was Meant to Burn” circles the image of the Man and the Temple as both sacrifice and release — a loop of destruction,
+        rebuilding, and the quiet realization that some part of you was always destined for the flame.
+      </p>
+    </section>
+
     <section class="section" aria-labelledby="lyrics-heading">
       <h2 id="lyrics-heading">Lyrics</h2>
       <pre class="lyrics-block">
-Lyrics coming soon.
+Lost in the desert, Lost My mind,
+Steel and fire covering my crime
+
+Reared in Steel burn it hot burn it down burn it now
+Reared in Steel burn it hot I need to burn it now
+
+raised in fire and steel, raised to burn it all
+raised in fire and steel, raised to build it all
+raised in fire and steel, raised to burn it all down
+burn it all down
+burn it all down
+
+burn the man
+burn the temple
+burn it all down
+
+fire in the desert, steel in my heart
+fire in the desert, steel in my heart
+fire and steel, fire and steel everywhere
+
+burn the man
+burn the temple
+burn it all down
+burn the man
+burn the temple
+burn it all down
+
+lost in the desert, i see a fire in the distance,
+I know I was meant to burn
+
+burn the man
+burn the temple
+burn it all down
+burn it all down
+
+burn it all down
+
+burn the man
+burn the temple
+burn it all down
+burn the man
+burn the temple
+burn it all down
+
+lost in the desert, i see a fire in the distance,
+I know I was meant to burn
+
+burn the man
+burn the temple
+burn it all down
+burn the man
+burn the temple
+burn it all down
+
+Lost in the desert, Lost My mind,
+Steel and fire covering my crime
+
+burn the man
+burn the temple
+burn it all down
+dowwn
+burn the man
+burn the temple
+burn it all doooowwn
+
+lost in the desert, i see a fire in the distance,
+I know I was meant to burn
+
+burn the man
+burn the temple
+burn it all down
+burn the man
+burn the temple
+burn it all down
       </pre>
     </section>
   </main>
@@ -73,16 +154,18 @@ Lyrics coming soon.
       "@type": "MusicAlbum",
       "@id": "https://music.mycal.net/albums/ashes-and-echoes"
     },
-    "genre": ["Folk", "Burning Man"],
+    "genre": ["Folk", "Electronic", "Burning Man"],
     "datePublished": "2025-08-15",
     "image": "https://music.mycal.net/assets/img/tracks/i-was-meant-to-burn.jpg",
     "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/i-was-meant-to-burn",
     "sameAs": [
       "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
     ],
+    "description": "\"I was Meant to Burn\" is a steel-and-fire mantra about surrendering to transformation in the desert. It circles the image of the Man and the Temple as both sacrifice and release — a loop of destruction, rebuilding, and the quiet realization that some part of you was always destined for the flame.",
+    "position": 2,
     "lyrics": {
       "@type": "CreativeWork",
-      "text": "Lyrics coming soon."
+      "text": "Lost in the desert, Lost My mind,\nSteel and fire covering my crime\n\nReared in Steel burn it hot burn it down burn it now\nReared in Steel burn it hot I need to burn it now\n\nraised in fire and steel, raised to burn it all\nraised in fire and steel, raised to build it all \nraised in fire and steel, raised to burn it all down\nburn it all down\nburn it all down\n\nburn the man \nburn the temple\nburn it all down\n\nfire in the desert, steel in my heart\nfire in the desert, steel in my heart\nfire and steel, fire and steel everywhere\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man \nburn the temple\nburn it all down\nburn it all down\n\nburn it all down\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down\n\nLost in the desert, Lost My mind,\nSteel and fire covering my crime\n\nburn the man \nburn the temple\nburn it all down\ndowwn\nburn the man \nburn the temple\nburn it all doooowwn\n\nlost in the desert, i see a fire in the distance,\nI know I was meant to burn\n\nburn the man \nburn the temple\nburn it all down\nburn the man \nburn the temple\nburn it all down"
     }
   }
   </script>
